--- a/.gitignore
+++ b/.gitignore
@@ -74,3 +74,4 @@ webroot/r.php
 
 webroot/player/winter/css/webChat - 副本.css
 webroot/player/default/css/webChat - 副本.css
+webapp/public/CommonFun20191219.php
