--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,4 @@ webapp/avision/Tpl/CH_ccjyj.2020_06_08/index.html
 webapp/avision/Tpl/CH_ccjyj.2020_06_08/index_1w.html
 webapp/avision/Tpl/CH_ccjyj.2020_06_08/userInfo.html
 webapp/avision/Lib/Action/CH_ccjyjAction.class.2020_06_08
+webapp/public/aliyun/Sms.Config.php
