--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@ vendor/
 secret/
 ssl证书/
 document/
+不上传的文档/
 *.bak
 *.log
 *.mp4
@@ -55,4 +56,4 @@ webapp/avision/Tpl/CH_ccjyj.2020_06_08/userInfo.html
 webapp/avision/Lib/Action/CH_ccjyjAction.class.2020_06_08
 webapp/public/aliyun/
 webapp/public/aliyun/Sms.Config.php
-*.docx
+
